--- a/html/css/main.css
+++ b/html/css/main.css
@@ -383,6 +383,7 @@ a {
     width: 500px;
     margin: 0 auto;
     margin-bottom: 60px;
+    max-width: 100%;
 }
 
 .block.app .img {
@@ -742,30 +743,46 @@ input[type="email"]:focus {
 
     .block .cover {
         width: 100%;
-        position: absolute;
-        top: 30px;
+        float: left;
         left: 0;
+        top: 30px;
+        position: absolute;
     }
 
     .block .desc {
         width: 100%;
-        height: 200px;
-        margin-top: 260px;
-        position: absolute;
-        top: 0;
-        left: 0;
+        min-height: 20px;
         padding: 0 30px;
+        margin-top: 300px;
+        display: block;
+        height: auto;
+        margin-bottom: 40px;
+    }
+
+    .block .desc .content {
+
+    }
+
+    .block .hexagon {
+        display: none;
+    }
+
+    .block h2,
+    .block p {
+        margin-left: 0;
+        width: 100%;
     }
 
     .block .img {
         background-position: center center;
         height: 220px;
         margin: 20px 0;
+        width: 100%;
+        background-size: contain;
     }
 
     .block .container {
         position: relative;
-        height: 460px;
     }
 
     .values .left,
@@ -774,6 +791,33 @@ input[type="email"]:focus {
     }
 
     .block.action .container {
+        height: auto;
+    }
+
+    .logo {
+        background-size: 160px auto;
+    }
+
+    #main-screen {
+        min-height: 500px;
+    }
+
+    #main-screen h1,
+    .block.action h2,
+    .values h2 {
+        font-size: 24px;
+    }
+
+    .values h2 {
+        margin-bottom: 30px;
+    }
+
+    .block.app .img {
+        margin-top: 30px;
+        height: 220px;
+    }
+
+    .block.app {
         height: auto;
     }
 }
