--- a/html/css/main.css
+++ b/html/css/main.css
@@ -96,7 +96,7 @@ textarea {
    ========================================================================== */
 
 body {
-    font-family: 'Helvetica', sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     font-weight: 300;
     font-size: 12px;
 }
