--- a/services/app/less/main.less
+++ b/services/app/less/main.less
@@ -137,6 +137,20 @@ canvas{
     max-height: 200px;
 }
 
+.logo {
+    width: 40px;
+    height: 40px;
+    background: url('../img/logo.svg') center center no-repeat;
+    background-size: contain;
+
+    &.large {
+        width: 80px;
+        height: 80px;
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+}
+
 @media (max-width: 767px) {
     canvas {
         // max-height: 300px;
