--- a/services/app/templates/login.html
+++ b/services/app/templates/login.html
@@ -2,7 +2,7 @@
     <div class="ui middle aligned center aligned grid">
         <div class="column">
             <h2 class="ui teal image header">
-                <img src="http://home.demeter.dev/img/logo.svg" class="image">
+                <div class="logo large"></div>
                 <div class="content">
                     Đăng nhập
                 </div>
