--- a/services/app/less/main.less
+++ b/services/app/less/main.less
@@ -33,6 +33,10 @@ body {
 
     .menu {
         margin: 0;
+
+        .item {
+
+        }
     }
 }
 
@@ -57,7 +61,7 @@ body {
         }
     }
 
-    h2 {
+    h3 {
         margin-top: 15px;
         margin-bottom: 15px;
     }
