--- a/services/app/templates/projects.html
+++ b/services/app/templates/projects.html
@@ -1,11 +1,11 @@
 <div id="projects">
     <div class="ui items projects">
-        <div class="item dmt box" ng-repeat="project in vm.data.projects">
-            <div class="ui small image rounded">
+        <div class="item dmt box" ng-repeat="project in vm.data.projects" ng-init="url = '#/project/' + project.id + '/' + (project.name | slugify) + '.html'">
+            <a href="{{url}}" class="ui small image rounded">
                 <img src="{{project.cover}}">
-            </div>
+            </a>
             <div class="content">
-                <h2 href="#/project/{{project.id}}/{{project.name | slugify}}.html" class="ui header">{{project.name}}</h2>
+                <h3 href="#/project/{{project.id}}/{{project.name | slugify}}.html" class="ui header"><a href="{{url}}">{{project.name}}</a></h3>
                 <div class="ui relaxed divided list horizontal">
                     <div class="item">
                         <i class="large ion-ios-location-outline middle aligned icon"></i>
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="extra">
-                    <a href="#/project/{{project.id}}/{{project.name | slugify}}.html" class="ui right labeled icon button right floated primary">
+                    <a href="{{url}}" class="ui right labeled icon button right floated positive">
                         Chi tiết
                         <i class="right chevron icon"></i>
                     </a>
