--- a/services/app/templates/zone.html
+++ b/services/app/templates/zone.html
@@ -23,7 +23,7 @@
                         </h4>
                         <div class="dmt box">
                             <img src="{{vm.data.zone.cover}}" alt="" class="ui image rounded cover medium centered">
-                            <div class="ui indicating teal progress tiny" data-percent="20">
+                            <div class="ui teal progress tiny" data-percent="20">
                                   <div class="bar" style="transition-duration: 300ms; width: 20%;"></div>
                                   <div class="label">20% </div>
                             </div>
