--- a/services/app/css/main.css
+++ b/services/app/css/main.css
@@ -62,6 +62,7 @@ body {
 #zone .ui.list,
 #project-detail .ui.list {
   width: 100%;
+  margin: 0;
   margin-bottom: 10px;
 }
 #zone .weather .item,
