--- a/services/app/less/main.less
+++ b/services/app/less/main.less
@@ -89,8 +89,8 @@ body {
 #project-detail {
     .ui.list {
         width: 100%;
+        margin: 0;
         margin-bottom: 10px;
-
     }
 
     .weather {
