--- a/services/app/less/main.less
+++ b/services/app/less/main.less
@@ -40,14 +40,18 @@ body {
     }
 }
 
-#projects .dmt.box,
-#project-detail .dmt.box,
-.dmt.box {
+.border-box() {
     background: #fff;
     border-radius: 3px;
     padding: 20px;
     border: 1px solid #F7F7F7;
     box-shadow: none;
+}
+
+#projects .dmt.box,
+#project-detail .dmt.box,
+.dmt.box {
+    .border-box();
 }
 
 #projects {
@@ -134,6 +138,25 @@ body {
     .ui.image.cover {
         margin-bottom: 20px;
     }
+
+    .ui.cards > .card {
+        .border-box();
+        padding: 0;
+        border-color: #F1F1F1;
+
+        p {
+            margin-bottom: 0;
+            width: 50%;
+            float: left;
+            b {
+                font-weight: normal;
+            }
+
+            &:last-child {
+                text-align: right
+            }
+        }
+    }
 }
 
 canvas{
@@ -153,6 +176,16 @@ canvas{
         margin: 0 auto;
         margin-bottom: 10px;
     }
+}
+
+.materials {
+  .up {
+    color: green;
+  }
+
+  .down {
+    color: red;
+  }
 }
 
 @media (max-width: 767px) {
