--- a/services/app/templates/project.html
+++ b/services/app/templates/project.html
@@ -1,10 +1,47 @@
 <div id="project-detail">
     <div class="ui grid stackable">
         <div class="eight wide column">
-            <h3 class="ui header">
+            <h4 class="ui header">
+                <i class="ion-ios-speedometer-outline icon"></i>
+                <div class="content">Thông tin chung</div>
+            </h4>
+            <div class="dmt box">
+                <div class="ui relaxed divided list">
+                    <div class="item">
+                        <i class="large ion-ios-location-outline middle aligned icon"></i>
+                        <div class="content">
+                            <div class="description">Địa điểm</div>
+                            <div class="header">Cầu Đất, Lâm Đồng</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <i class="large ion-ios-people-outline middle aligned icon"></i>
+                        <div class="content">
+                            <div class="description">Nhân công</div>
+                            <div class="header">61 người</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <i class="large ion-ios-keypad-outline middle aligned icon"></i>
+                        <div class="content">
+                            <div class="description">Số lượng Zone</div>
+                            <div class="header">2 zone</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <i class="large ion-ios-crop middle aligned icon"></i>
+                        <div class="content">
+                            <div class="description">Diện tích</div>
+                            <div class="header">220 ha</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h4 class="ui header">
                 <i class="ion-ios-partlysunny-outline icon"></i>
                 <div class="content">Dự báo thời tiết</div>
-            </h3>
+            </h4>
             <div class="dmt box weather">
                 <div class="ui list grid">
                     <div class="item four wide computer eight wide mobile column" ng-repeat="(key, value) in vm.data.project.weathers.series" ng-click="vm.data.project.weathers.active=key" ng-class="{active:vm.data.project.weathers.active==key}">
@@ -25,10 +62,10 @@
             </div>
         </div>
         <div class="eight wide column">
-            <h3 class="ui header">
-                <i class="ion-ios-browsers-outline icon"></i>
+            <h4 class="ui header">
+                <i class="ion-ios-keypad-outline icon"></i>
                 <div class="content">Zones</div>
-            </h3>
+            </h4>
             <div class="ui items">
                 <div class="item dmt box" ng-repeat="zone in vm.data.project.zones" ng-init="url = '#/project/' + vm.data.project.id + '/' + (vm.data.project.name | slugify) + '/zone/' + zone.id + '/' + (zone.name | slugify) + '.html'">
                     <a href="{{url}}" class="ui tiny image rounded">
