--- a/services/app/templates/zone.html
+++ b/services/app/templates/zone.html
@@ -40,7 +40,7 @@
                                     <i class="large ion-ios-calendar-outline middle aligned icon"></i>
                                     <div class="content">
                                         <div class="description">Ngày dự kiến thu hoạch</div>
-                                        <div class="header">30/08/2015</div>
+                                        <div class="header">12/10/2015</div>
                                     </div>
                                 </div>
                                 <div class="item">
@@ -418,7 +418,7 @@
                                     3 ngày trước
                                 </div>
                                 <div class="text">
-                                    Còn <a href="">5 ngày</a> nữa <a href="">thu hoạch</a>.
+                                    Còn <a href="">32 ngày</a> nữa <a href="">thu hoạch</a>.
                                 </div>
                             </div>
                         </div>
@@ -431,7 +431,7 @@
                                     4 ngày trước
                                 </div>
                                 <div class="text">
-                                    <a href="">Thu Hoa</a> chưa xong công việc hôm qua.
+                                    <a href="">Diễm Trúc</a> chưa xong công việc hôm qua.
                                 </div>
                             </div>
                         </div>
@@ -551,7 +551,7 @@
                         <tr>
                           <td>Thực tế</td>
                           <td>1,000 kg</td>
-                          <td>9,500 kg</td>
+                          <td>950 kg</td>
                           <td><i class="icon ion-arrow-up-c green"></i> 5%</td>
                           <td>35,000,000 VNĐ</td>
                         </tr>
