--- a/html/css/main.css
+++ b/html/css/main.css
@@ -197,7 +197,7 @@ a {
     float: left;
     opacity: 1.0;
     position: relative;
-    background-image: url('../img/bg-2.jpg');
+    background-image: url('../img/bg-2-min.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     -webkit-filter: blur(0px);
